[Changed] HttpApiInterceptors config

--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
                 }]);
                 
                 app.run(['$log', function($log) {
-                    $log.debug('a');
+                    $log.debug('ok');
                 }]);
                 
                 angular.bootstrap(document, ['app']);
